adding resume page / formatting home's footer for additional content

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <title>John Burt - Financial Analyst</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
-    <link rel="stylesheet" href="assets/css/main.css" />
+    <!--[if lte IE 8]><script src="assets/js/html5shiv.min.js"></script><![endif]-->
+    <link rel="stylesheet" href="assets/css/main.min.css" />
     <!--[if lte IE 9
       ]><link rel="stylesheet" href="assets/css/ie9.css"
     /><![endif]-->
@@ -41,7 +41,7 @@
       <section id="main">
         <header>
           <span class="avatar"
-            ><img src="images/run.jpg" alt="John Burt Avatar"
+            ><img src="assets/img/run-112.jpg" alt="John Burt Avatar"
           /></span>
           <h1>John Burt</h1>
           <p>Financial Analyst</p>
@@ -88,6 +88,9 @@
             </li>
           </ul>
         </footer>
+        <div>
+          <p><a href="pg_resume/index.html">Resume</a> || <a href="pg_about/index.html">About Me</a> || <a href="pg_blog/index.html">Blag</a></p>
+        </div>
       </section>
 
       <!-- Footer -->
