--- a/resume/index.html
+++ b/resume/index.html
@@ -35,7 +35,7 @@
     <link href="../assets/css/simple-line-icons.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../assets/css/resume.min.css" rel="stylesheet">
+    <link href="../assets/css/resume.css" rel="stylesheet">
     <noscript><link rel="stylesheet" href="../assets/css/noscript.css"/></noscript>
 
   </head>
@@ -95,27 +95,41 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Financial Analyst</h3>
-              <div class="subheading mb-3">
-                <a href="https://aspirepublicschools.org/">Aspire Public Schools</a>
+              <h3 class="mb-0"><a href="https://aspirepublicschools.org/">Aspire Public Schools</a></h3>
+              <div class="subheading mb-3 position-title">
+                Financial Analyst
               </div>
               <p>
-                I work with our budding schools in Tennessee as we work through the intricate debut of public charter schools to Memphis and surrounding Shelby County. This has encompassed forecasting anything from federal grants / staffing needs / enrollment to passing information up or downstream to Tennessee’s unique Achievement School District. I’ve had the opportunity to undertake many projects in name of efficiency and more-over, accuracy. These have encompassed mapping the state of California's chart of accounts to that of Tennessee's through SQL in order to preserve the proven reimbursement process of our veteran California schools and using our data warehouse to accurately report enrollment and attendance information to the state several times a year.
+                I worked with our budding schools in Tennessee as we navigated the intricate debut of public charter schools to Memphis and surrounding Shelby County. This encompassed forecasting anything from federal grants / staffing needs / enrollment to passing information up or downstream to Tennessee’s unique Achievement School District. I had the opportunity to undertake many projects in name of efficiency and more-over, accuracy. These encompassed mapping the state of California's chart of accounts to that of Tennessee's through SQL and some clever Excel pivot lookup tables. This process was necessary to preserve the proven reimbursement process of our veteran California schools.
               </p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary time-period">June 2017 - February 2019</span>
+              <span class="text-primary time-period">February 2018 - February 2019</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Manager</h3>
-              <div class="subheading mb-3">
-                <a href="https://www.dining.vt.edu/">Virginia Tech Dining Services</a>
+              <div class="subheading mb-3 position-title">
+                Finance Program Assistant
               </div>
               <p>
-                I worked in the best university dining halls in the US as an Student Manager. I oversaw the safe, clean, and timely preparation of 8000+ quality meals a day. Virginia Tech’s Dining services is noted for their flexibility in menu and ability to cater to any customer. From this, I have learned to work with time constraints, the importance of versatility, and value of on the spot solutions; all of which are products of solid teamwork. 
+                I streamlined Aspire's Nutrition Program and conducted both State and Federal reporting for our 14,000+ students over 30 California schools. My background in food service and federal regulations such as HACCP gave me a smooth transition into financially understanding and managing our Nutrition Program. Using my toolbelt in Excel, VBA, and Python; I sped up our reimbursement process with California's state and federal programs through multiple rigorous systems in account reconciliation, financial/attendance reporting, and trimming of excess costs. The strength in this consolidation was highlighted as I lead our program through its first audit in four years conducted by the USDA.
+              </p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary time-period">June 2017 - February 2018</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0"><a href="https://www.dining.vt.edu/">Virginia Tech Dining Services</a></h3>
+              <div class="subheading mb-3 position-title">
+                Manager
+              </div>
+              <p>
+                I worked in the best university dining halls in the US as a Student Manager. I oversaw the safe, clean, and timely preparation of 8000+ quality meals a day. Virginia Tech’s Dining services is noted for their flexibility in menu and ability to cater to any customer. From this, I have learned to work with time constraints, the importance of versatility, and value of on the spot solutions; all of which are products of solid teamwork. 
               </p>
             </div>
             <div class="resume-date text-md-right">
@@ -123,6 +137,25 @@
             </div>
           </div>
 
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+              <div class="resume-content mr-auto">
+                <h3 class="mb-0"><a href="https://www.raytheon.com/capabilities/products/gps_ocx">Raytheon - GPS OCX</a></h3>
+                <div class="subheading mb-3 position-title">
+                  Systems Engineer
+                </div>
+                <p>
+                    Here I got my first taste of Reliability Engineering working on the GPS OCX program. A large undertaking, the program required a thorough testing regimen at all steps of it’s growth. I was a member of the RMA team (Reliability, Maintainability, and Availability) with a focus on overall upkeep of the complex ground system. I helped keep the model properly documented for publishing to Government oversight committees. On occasion I was given the wheel in corrections and revaluations of this model using VSPAR, a software dedicated to far-reaching Monte Carlo simulations.
+                  </p>
+                  <p>
+                    Along with this rigorous simulation, I also had the experience of standardizing outcomes for the FMECA model (Failure Mode, Effects, and Criticality Analysis). This analysis’ interpretation was important in evaluating outcomes of the system and tagging unnecessary risk. In essence, we were finding vulnerable components through the use of post-processed data. Once this data had been gathered, I was tasked with scripting each outcome into a series of tags for use in the components respective departments.
+                  </p>
+              </div>
+              <div class="resume-date text-md-right">
+                <span class="text-primary time-period">May 2013 - September 2013</span>
+              </div>
+            </div>
+
+        <!--
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Miscellaneous</h3>
@@ -137,11 +170,12 @@
               <span class="text-primary time-period">The distant past</span>
             </div>
           </div>
+        -->
 
         </div>
 
       </section>
-
+    <!--
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
         <div class="my-auto">
           <h2 class="mb-5">Education</h2>
@@ -149,7 +183,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Virginia Tech</h3>
-              <div class="subheading mb-3">Bachelor of Arts, <strong>Economics</strong></div>
+              <div class="subheading mb-3">Bachelor of Arts</div>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary time-period">September 2011 - June 2016</span>
@@ -158,30 +192,25 @@
 
         </div>
       </section>
-
+    -->
+    
+    <!--
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
         <div class="my-auto">
           <h2 class="mb-5">Skills</h2>
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
           <p>
-            Programming languages programming languages programming languages programming languages
-            programming languages programming languages programming languages programming languages
-            programming languages programming languages programming languages programming languages
-            programming languages programming languages programming languages programming languages
-            programming languages programming languages programming languages programming languages
+            Python, VBA, C++, SQL, 
           </p>
-
       </section>
+    -->
 
+    <!--
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
           <p>
-            Interests interests interests interests interests interests interests interests interests
-            interests interests interests interests interests interests interests interests interests
-            interests interests interests interests interests interests interests interests interests
-            interests interests interests interests interests interests interests interests interests
-            interests interests interests interests interests interests interests interests interests
+            In my free time, I enjoy riding my motorcycle around Northern California and 
           </p>
           <p class="mb-0">
             interests interests interests interests interests interests interests interests interests
@@ -193,7 +222,7 @@
           </p>
         </div>
       </section>
-
+    -->
     </div>
 
     <!-- Bootstrap core JavaScript -->
