updated landing page to direct to shortened urls

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     <title>John Burt - Financial Analyst</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!--[if lte IE 8]><script src="assets/js/html5shiv.min.js"></script><![endif]-->
+    <!--[if lte IE 8
+      ]><script src="assets/js/html5shiv.min.js"></script
+    ><![endif]-->
     <link rel="stylesheet" href="assets/css/main.min.css" />
     <!--[if lte IE 9
       ]><link rel="stylesheet" href="assets/css/ie9.css"
@@ -89,7 +91,11 @@
           </ul>
         </footer>
         <div>
-          <p><a href="pg_resume/index.html">Resume</a> || <a href="pg_about/index.html">About Me</a> || <a href="pg_blog/index.html">Blag</a></p>
+          <p>
+            <a href="/resume">Resume</a> || 
+            <a href="/about">About Me</a> ||
+            <a href="/blog">Blag</a>
+          </p>
         </div>
       </section>
 
