--- a/resume/index.html
+++ b/resume/index.html
@@ -102,14 +102,6 @@
               <p>
                 I worked with our budding schools in Tennessee as we navigated the intricate debut of public charter schools to Memphis and surrounding Shelby County. This encompassed forecasting anything from federal grants / staffing needs / enrollment to passing information up or downstream to Tennessee’s unique Achievement School District. I had the opportunity to undertake many projects in name of efficiency and more-over, accuracy. These encompassed mapping the state of California's chart of accounts to that of Tennessee's through SQL and some clever Excel pivot lookup tables. This process was necessary to preserve the proven reimbursement process of our veteran California schools.
               </p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary time-period">February 2018 - February 2019</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
               <div class="subheading mb-3 position-title">
                 Finance Program Assistant
               </div>
@@ -118,7 +110,7 @@
               </p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary time-period">June 2017 - February 2018</span>
+              <span class="text-primary time-period">June 2017 - February 2019</span>
             </div>
           </div>
 
@@ -129,31 +121,43 @@
                 Manager
               </div>
               <p>
-                I worked in the best university dining halls in the US as a Student Manager. I oversaw the safe, clean, and timely preparation of 8000+ quality meals a day. Virginia Tech’s Dining services is noted for their flexibility in menu and ability to cater to any customer. From this, I have learned to work with time constraints, the importance of versatility, and value of on the spot solutions; all of which are products of solid teamwork. 
+                I worked in the best university dining halls in the US as a Student Manager. I supported any of our five Assistant Managers during events to ensure a smooth transition in our schedules, duties, and training. I also owned our quality of service and answered to any grievances from our clientele; whether it be Virginia Tech Football, undergrads, or the Mother of the Bride (yeah, that level of accountability)
+              </p>
+              <div class="subheading mb-3 position-title">
+                Assistant Manager
+              </div>
+              <p>
+                I learned that, in customer service leadership, my customers are the employees I work directly with. Getting smiles onto everyone's face early in the shift made for enjoyable work and helped everyone temporarily escape the general stresses of being an undergraduate.
+              </p>
+              <div class="subheading mb-3 position-title">
+                Server
+              </div>
+              <p>
+                As a server, I quickly learned the value of teamwork and being on the same page as those I was working with. There's a fine line between pal-ing around and falling in line when working in service roles, but on a higher level, we do it all as a team.
               </p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary time-period">June 2014 - January 2017</span>
+              <span class="text-primary time-period">June 2014 - December 2016</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
-              <div class="resume-content mr-auto">
-                <h3 class="mb-0"><a href="https://www.raytheon.com/capabilities/products/gps_ocx">Raytheon - GPS OCX</a></h3>
-                <div class="subheading mb-3 position-title">
-                  Systems Engineer
-                </div>
-                <p>
-                    Here I got my first taste of Reliability Engineering working on the GPS OCX program. A large undertaking, the program required a thorough testing regimen at all steps of it’s growth. I was a member of the RMA team (Reliability, Maintainability, and Availability) with a focus on overall upkeep of the complex ground system. I helped keep the model properly documented for publishing to Government oversight committees. On occasion I was given the wheel in corrections and revaluations of this model using VSPAR, a software dedicated to far-reaching Monte Carlo simulations.
-                  </p>
-                  <p>
-                    Along with this rigorous simulation, I also had the experience of standardizing outcomes for the FMECA model (Failure Mode, Effects, and Criticality Analysis). This analysis’ interpretation was important in evaluating outcomes of the system and tagging unnecessary risk. In essence, we were finding vulnerable components through the use of post-processed data. Once this data had been gathered, I was tasked with scripting each outcome into a series of tags for use in the components respective departments.
-                  </p>
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0"><a href="https://www.raytheon.com/capabilities/products/gps_ocx">Raytheon - GPS OCX</a></h3>
+              <div class="subheading mb-3 position-title">
+                Systems Engineer
               </div>
-              <div class="resume-date text-md-right">
-                <span class="text-primary time-period">May 2013 - September 2013</span>
-              </div>
+              <p>
+                Here I got my first taste of Reliability Engineering working on the GPS OCX program. A large undertaking, the program required a thorough testing regimen at all steps of it’s growth. I was a member of the RMA team (Reliability, Maintainability, and Availability) with a focus on overall upkeep of the complex ground system. I helped keep the model properly documented for publishing to Government oversight committees. On occasion I was given the wheel in corrections and revaluations of this model using VSPAR, a software dedicated to far-reaching Monte Carlo simulations.
+              </p>
+              <p>
+                Along with this rigorous simulation, I also had the experience of standardizing outcomes for the FMECA model (Failure Mode, Effects, and Criticality Analysis). This analysis’ interpretation was important in evaluating outcomes of the system and tagging unnecessary risk. In essence, we were finding vulnerable components through the use of post-processed data. Once this data had been gathered, I was tasked with scripting each outcome into a series of tags for use in the components respective departments.
+              </p>
             </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary time-period">May 2013 - September 2013</span>
+            </div>
+          </div>
 
         <!--
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
@@ -171,10 +175,9 @@
             </div>
           </div>
         -->
-
         </div>
-
       </section>
+
     <!--
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
         <div class="my-auto">
