--- a/resume/index.html
+++ b/resume/index.html
@@ -75,6 +75,7 @@
 
     <div class="container-fluid p-0">
 
+      <!-------- Header -------------------------------------------------------------------------->
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
           <h1 class="mb-0">John
@@ -89,6 +90,7 @@
         </div>
       </section>
 
+      <!-------- Experience ---------------------------------------------------------------------->
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
           <h2 class="mb-5">Experience</h2>
@@ -178,7 +180,7 @@
         </div>
       </section>
 
-    <!--
+      <!-------- Education ----------------------------------------------------------------------->
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
         <div class="my-auto">
           <h2 class="mb-5">Education</h2>
@@ -195,19 +197,21 @@
 
         </div>
       </section>
-    -->
     
-    <!--
+      <!-------- Skillz -------------------------------------------------------------------------->
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
         <div class="my-auto">
           <h2 class="mb-5">Skills</h2>
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
           <p>
-            Python, VBA, C++, SQL, 
+            Through the range of my positions and industries I've worked in, I've had plenty of opportunities to pick up different softwares and languages, from enterprise to open source. 
+            Historically, I've done much of my projects with SSMS and Python's pyodbc and xlsxwriter in order to reliably produce financial reports for stakeholders.
+            More recently, I've started putting my eggs into Python's basket as I use my Raspberry Pi to issue Docker instances through Apache Airflow and posting via Flask. 
+            Admittedly a sharp learning curve for a Financial Analyst, but absolutely fascinating in terms of speed, versatility, and presentability.
           </p>
       </section>
-    -->
 
+      <!-------- Interests ----------------------------------------------------------------------->
     <!--
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
