making sections more readable

--- a/resume/index.html
+++ b/resume/index.html
@@ -85,7 +85,10 @@
             <a href="mailto:johnrburt@johnrburt.com">johnrburt@johnrburt.com</a>
           </div>
           <p class="mb-5">
-            I’m an avid problem solver. I enjoy using applicable data to find pragmatic solutions. Using my toolbelt of analytical skills; creativity, curiosity and a good perspective help me partition complex problems into sustainable solutions. I’ve also had experience pulling significance from sparse data sets, through both confident interpretation and mathematical interpolation.
+            I’m an avid problem solver. 
+            I enjoy using applicable data to find pragmatic solutions. 
+            Using my toolbelt of analytical skills; creativity, curiosity and a good perspective help me partition complex problems into sustainable solutions. 
+            I’ve also had experience pulling significance from sparse data sets, through both confident interpretation and mathematical interpolation.
           </p>
         </div>
       </section>
@@ -102,13 +105,20 @@
                 Financial Analyst
               </div>
               <p>
-                I worked with our budding schools in Tennessee as we navigated the intricate debut of public charter schools to Memphis and surrounding Shelby County. This encompassed forecasting anything from federal grants / staffing needs / enrollment to passing information up or downstream to Tennessee’s unique Achievement School District. I had the opportunity to undertake many projects in name of efficiency and more-over, accuracy. These encompassed mapping the state of California's chart of accounts to that of Tennessee's through SQL and some clever Excel pivot lookup tables. This process was necessary to preserve the proven reimbursement process of our veteran California schools.
+                I worked with our budding schools in Tennessee as we navigated the intricate debut of public charter schools to Memphis and surrounding Shelby County. 
+                This encompassed forecasting anything from federal grants / staffing needs / enrollment to passing information up or downstream to Tennessee’s unique Achievement School District. 
+                I had the opportunity to undertake many projects in name of efficiency and more-over, accuracy. 
+                These encompassed mapping the state of California's chart of accounts to that of Tennessee's through SQL and some clever Excel pivot lookup tables. 
+                This process was necessary to preserve the proven reimbursement process of our veteran California schools.
               </p>
               <div class="subheading mb-3 position-title">
                 Finance Program Assistant
               </div>
               <p>
-                I streamlined Aspire's Nutrition Program and conducted both State and Federal reporting for our 14,000+ students over 30 California schools. My background in food service and federal regulations such as HACCP gave me a smooth transition into financially understanding and managing our Nutrition Program. Using my toolbelt in Excel, VBA, and Python; I sped up our reimbursement process with California's state and federal programs through multiple rigorous systems in account reconciliation, financial/attendance reporting, and trimming of excess costs. The strength in this consolidation was highlighted as I lead our program through its first audit in four years conducted by the USDA.
+                I streamlined Aspire's Nutrition Program and conducted both State and Federal reporting for our 14,000+ students over 30 California schools. 
+                My background in food service and federal regulations such as HACCP gave me a smooth transition into financially understanding and managing our Nutrition Program. 
+                Using my toolbelt in Excel, VBA, and Python; I sped up our reimbursement process with California's state and federal programs through multiple rigorous systems in account reconciliation, financial/attendance reporting, and trimming of excess costs. 
+                The strength in this consolidation was highlighted as I lead our program through its first audit in four years conducted by the USDA.
               </p>
             </div>
             <div class="resume-date text-md-right">
@@ -123,19 +133,23 @@
                 Manager
               </div>
               <p>
-                I worked in the best university dining halls in the US as a Student Manager. I supported any of our five Assistant Managers during events to ensure a smooth transition in our schedules, duties, and training. I also owned our quality of service and answered to any grievances from our clientele; whether it be Virginia Tech Football, undergrads, or the Mother of the Bride (yeah, that level of accountability)
+                I worked in the best university dining halls in the US as a Student Manager. 
+                I supported any of our five Assistant Managers during events to ensure a smooth transition in our schedules, duties, and training. 
+                I also owned our quality of service and answered to any grievances from our clientele; whether it be Virginia Tech Football, undergrads, or the Mother of the Bride (yeah, that level of accountability)
               </p>
               <div class="subheading mb-3 position-title">
                 Assistant Manager
               </div>
               <p>
-                I learned that, in customer service leadership, my customers are the employees I work directly with. Getting smiles onto everyone's face early in the shift made for enjoyable work and helped everyone temporarily escape the general stresses of being an undergraduate.
+                I learned that, in customer service leadership, my customers are the employees I work directly with. 
+                Getting smiles onto everyone's face early in the shift made for enjoyable work and helped everyone temporarily escape the general stresses of being an undergraduate.
               </p>
               <div class="subheading mb-3 position-title">
                 Server
               </div>
               <p>
-                As a server, I quickly learned the value of teamwork and being on the same page as those I was working with. There's a fine line between pal-ing around and falling in line when working in service roles, but on a higher level, we do it all as a team.
+                As a server, I quickly learned the value of teamwork and being on the same page as those I was working with. 
+                There's a fine line between pal-ing around and falling in line when working in service roles, but on a higher level, we do it all as a team.
               </p>
             </div>
             <div class="resume-date text-md-right">
@@ -150,10 +164,17 @@
                 Systems Engineer
               </div>
               <p>
-                Here I got my first taste of Reliability Engineering working on the GPS OCX program. A large undertaking, the program required a thorough testing regimen at all steps of it’s growth. I was a member of the RMA team (Reliability, Maintainability, and Availability) with a focus on overall upkeep of the complex ground system. I helped keep the model properly documented for publishing to Government oversight committees. On occasion I was given the wheel in corrections and revaluations of this model using VSPAR, a software dedicated to far-reaching Monte Carlo simulations.
+                Here I got my first taste of Reliability Engineering working on the GPS OCX program. 
+                A large undertaking, the program required a thorough testing regimen at all steps of it’s growth. 
+                I was a member of the RMA team (Reliability, Maintainability, and Availability) with a focus on overall upkeep of the complex ground system. 
+                I helped keep the model properly documented for publishing to Government oversight committees. 
+                On occasion I was given the wheel in corrections and revaluations of this model using VSPAR, a software dedicated to far-reaching Monte Carlo simulations.
               </p>
               <p>
-                Along with this rigorous simulation, I also had the experience of standardizing outcomes for the FMECA model (Failure Mode, Effects, and Criticality Analysis). This analysis’ interpretation was important in evaluating outcomes of the system and tagging unnecessary risk. In essence, we were finding vulnerable components through the use of post-processed data. Once this data had been gathered, I was tasked with scripting each outcome into a series of tags for use in the components respective departments.
+                Along with this rigorous simulation, I also had the experience of standardizing outcomes for the FMECA model (Failure Mode, Effects, and Criticality Analysis). 
+                This analysis’ interpretation was important in evaluating outcomes of the system and tagging unnecessary risk. 
+                In essence, we were finding vulnerable components through the use of post-processed data. 
+                Once this data had been gathered, I was tasked with scripting each outcome into a series of tags for use in the components respective departments.
               </p>
             </div>
             <div class="resume-date text-md-right">
@@ -161,22 +182,27 @@
             </div>
           </div>
 
-        <!--
+        
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Miscellaneous</h3>
               <p>
-                Here I got my first taste of Reliability Engineering working on the GPS OCX program. A large undertaking, the program required a thorough testing regimen at all steps of it’s growth. I was a member of the RMA team (Reliability, Maintainability, and Availability) with a focus on overall upkeep of the complex ground system. I helped keep the model properly documented for publishing to Government oversight committees. On occasion I was given the wheel in corrections and revaluations of this model using VSPAR, a software dedicated to far-reaching Monte Carlo simulations.
+                Before my personal manifest destiny, I worked for Carter Machinery, a wholly owned subsidiary of Caterpillar, in Southwest Virginia digitizing legacy files. 
+                I participated in quality assurance on this new database Caterpillar was developing in-house for reliability and readability. 
+                This system connects files to the network for the convenience of machine shops and field mechanics across rural Appalachia region.
               </p>
               <p>
-                Along with this rigorous simulation, I also had the experience of standardizing outcomes for the FMECA model (Failure Mode, Effects, and Criticality Analysis). This analysis’ interpretation was important in evaluating outcomes of the system and tagging unnecessary risk. In essence, we were finding vulnerable components through the use of post-processed data. Once this data had been gathered, I was tasked with scripting each outcome into a series of tags for use in the components respective departments.
+                Since I was 14, I've been working different roles, shifts, and periods in food service. 
+                The hustle of a rush, tension of blunders, and warmth of the atmosphere (sometimes literally) has defined a large aspect of my life. 
+                I thrive in a social atmosphere where we solve problems as a team and our opponent is time.
+                I look forward to carrying these qualities through my life and into new roles in different industries.
               </p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary time-period">The distant past</span>
             </div>
           </div>
-        -->
+        
         </div>
       </section>
 
@@ -188,7 +214,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Virginia Tech</h3>
-              <div class="subheading mb-3">Bachelor of Arts</div>
+              <div class="subheading mb-3">Bachelor of Arts, Economics</div>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary time-period">September 2011 - June 2016</span>
@@ -204,7 +230,7 @@
           <h2 class="mb-5">Skills</h2>
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
           <p>
-            Through the range of my positions and industries I've worked in, I've had plenty of opportunities to pick up different softwares and languages, from enterprise to open source. 
+            Through the range of positions and industries I've worked in, I've had plenty of opportunities to pick up different softwares and languages, from enterprise to open source. 
             Historically, I've done much of my projects with SSMS and Python's pyodbc and xlsxwriter in order to reliably produce financial reports for stakeholders.
             More recently, I've started putting my eggs into Python's basket as I use my Raspberry Pi to issue Docker instances through Apache Airflow and posting via Flask. 
             Admittedly a sharp learning curve for a Financial Analyst, but absolutely fascinating in terms of speed, versatility, and presentability.
