tossing blog content into markdown file (from OneNote)

--- a/resume/index.html
+++ b/resume/index.html
@@ -187,14 +187,14 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Miscellaneous</h3>
               <p>
-                Before my personal manifest destiny, I worked for Carter Machinery, a wholly owned subsidiary of Caterpillar, in Southwest Virginia digitizing legacy files. 
+                Before my personal manifest destiny, I worked in Southwest Virginia digitizing legacy work orders and warranty files for Caterpillar. 
                 I participated in quality assurance on this new database Caterpillar was developing in-house for reliability and readability. 
                 This system connects files to the network for the convenience of machine shops and field mechanics across rural Appalachia region.
               </p>
               <p>
-                Since I was 14, I've been working different roles, shifts, and periods in food service. 
-                The hustle of a rush, tension of blunders, and warmth of the atmosphere (sometimes literally) has defined a large aspect of my life. 
-                I thrive in a social atmosphere where we solve problems as a team and our opponent is time.
+                Since I was 14, I've been working in food service in different roles, shifts, and periods. 
+                The hustle of a rush, tension of blunders, and heat of the kitchen has defined a large aspect of my life. 
+                I thrive in a social atmosphere where we solve problems as a team and our opponent is time. 
                 I look forward to carrying these qualities through my life and into new roles in different industries.
               </p>
             </div>
