changing out location, title, background, and  cleaning random bits

--- a/index.html
+++ b/index.html
@@ -5,124 +5,138 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html lang="en">
-  <head>
+<head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-135276061-1"
+            async
+            src="https://www.googletagmanager.com/gtag/js?id=UA-135276061-1"
     ></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
+        window.dataLayer = window.dataLayer || [];
 
-      gtag("config", "UA-135276061-1");
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag("js", new Date());
+
+        gtag("config", "UA-135276061-1");
     </script>
-
-    <title>John Burt - Financial Analyst</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>John Burt - Data Analyst</title>
+    <meta charset="utf-8"/>
+    <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <!--[if lte IE 8
-      ]><script src="assets/js/html5shiv.min.js"></script
-    ><![endif]-->
-    <link rel="stylesheet" href="assets/css/main.min.css" />
+      ]>
+    <script src="assets/js/html5shiv.min.js"></script
+    >
+    <![endif]-->
+    <link href="assets/css/main.min.css" rel="stylesheet"/>
     <!--[if lte IE 9
-      ]><link rel="stylesheet" href="assets/css/ie9.css"
-    /><![endif]-->
+      ]>
+    <link rel="stylesheet" href="assets/css/ie9.min.css"
+    />
+    <![endif]-->
     <!--[if lte IE 8
-      ]><link rel="stylesheet" href="assets/css/ie8.css"
-    /><![endif]-->
-    <noscript><link rel="stylesheet" href="assets/css/noscript.css"/></noscript>
-  </head>
-  <body class="is-loading">
-    <!-- Wrapper -->
-    <div id="wrapper">
-      <!-- Main -->
-      <section id="main">
+      ]>
+    <link rel="stylesheet" href="assets/css/ie8.min.css"
+    />
+    <![endif]-->
+    <noscript>
+        <link href="assets/css/noscript.min.css" rel="stylesheet"/>
+    </noscript>
+</head>
+<body class="is-loading">
+<!-- Wrapper -->
+<div id="wrapper">
+    <!-- Main -->
+    <section id="main">
         <header>
-          <span class="avatar"
-            ><img src="assets/img/run-112.jpg" alt="John Burt Avatar"
-          /></span>
-          <h1>John Burt</h1>
-          <p>Financial Analyst</p>
-          <p><em>Oakland, California</em></p>
+					<span class="avatar"
+                    >
+						<img alt="John Burt Avatar" src="assets/img/run-112.jpg"
+                        />
+					</span>
+            <h1>John Burt</h1>
+            <p>Data Analyst</p>
+            <p>
+                <em>Boulder, Colorado</em>
+            </p>
         </header>
-
         <footer>
-          <ul class="icons">
-            <li>
-              <a
-                href="https://github.com/JRBurt"
-                target="_blank"
-                class="fa-github"
-                title="John Burt's profile on Github"
-                >GitHub</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://twitter.com/John_Burt_R"
-                target="_blank"
-                class="fa-twitter"
-                title="John Burt's profile on Twitter"
-                >Twitter</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://www.linkedin.com/in/johnrburt"
-                target="_blank"
-                class="fa-linkedin"
-                title="John Burt's profile on LinkedIn"
-                >LinkedIn</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://www.facebook.com/John.Burt.R"
-                target="_blank"
-                class="fa-facebook"
-                title="John Burt's profile on Facebook"
-                >Facebook</a
-              >
-            </li>
-          </ul>
+            <ul class="icons">
+                <li>
+                    <a
+                            class="fa-github"
+                            href="https://github.com/JRBurt"
+                            target="_blank"
+                            title="John Burt's profile on Github"
+                    >GitHub</a
+                    >
+                </li>
+                <li>
+                    <a
+                            class="fa-twitter"
+                            href="https://twitter.com/John_Burt_R"
+                            target="_blank"
+                            title="John Burt's profile on Twitter"
+                    >Twitter</a
+                    >
+                </li>
+                <li>
+                    <a
+                            class="fa-linkedin"
+                            href="https://www.linkedin.com/in/johnrburt"
+                            target="_blank"
+                            title="John Burt's profile on LinkedIn"
+                    >LinkedIn</a
+                    >
+                </li>
+                <li>
+                    <a
+                            class="fa-facebook"
+                            href="https://www.facebook.com/John.Burt.R"
+                            target="_blank"
+                            title="John Burt's profile on Facebook"
+                    >Facebook</a
+                    >
+                </li>
+            </ul>
         </footer>
         <div>
-          <p>
-            <a href="/resume">Resume</a> || 
-            <a href="/about">About Me</a> ||
-            <a href="/blog">Blag</a>
-          </p>
+            <p>
+                <a href="/resume">Resume</a> ||
+
+                <a href="/about">About Me</a> ||
+
+                <a href="/blog">Blag</a>
+            </p>
         </div>
-      </section>
-
-      <!-- Footer -->
-      <footer id="footer">
+    </section>
+    <!-- Footer -->
+    <footer id="footer">
         <ul class="copyright">
-          <li>&copy; John Burt 2019</li>
+            <li>&copy; John Burt 2020</li>
         </ul>
-      </footer>
-    </div>
-
-    <!-- Scripts -->
-    <!--[if lte IE 8
-      ]><script src="assets/js/respond.min.js"></script
-    ><![endif]-->
-    <script>
-      if ("addEventListener" in window) {
-        window.addEventListener("load", function() {
-          document.body.className = document.body.className.replace(
-            /\bis-loading\b/,
-            ""
-          );
+    </footer>
+</div>
+<!-- Scripts -->
+<!--[if lte IE 8
+      ]>
+<script src="assets/js/respond.min.js"></script
+>
+<![endif]-->
+<script>
+    if ("addEventListener" in window) {
+        window.addEventListener("load", function () {
+            document.body.className = document.body.className.replace(
+                /\bis-loading\b/,
+                ""
+            );
         });
         document.body.className += navigator.userAgent.match(/(MSIE|rv:11\.0)/)
-          ? " is-ie"
-          : "";
-      }
-    </script>
-  </body>
+            ? " is-ie"
+            : "";
+    }
+</script>
+</body>
 </html>
