--- a/resume/index.html
+++ b/resume/index.html
@@ -204,42 +204,50 @@
                 </div>
             </div>
 
-            <!--
-              <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-item d-flex flex-column flex-md-row mb-5">
                 <div class="resume-content mr-auto">
-                  <h3 class="mb-0">Miscellaneous</h3>
-                  <p>
-                    Here I got my first taste of Reliability Engineering working on the GPS OCX program. A large undertaking, the program required a thorough testing regimen at all steps of it’s growth. I was a member of the RMA team (Reliability, Maintainability, and Availability) with a focus on overall upkeep of the complex ground system. I helped keep the model properly documented for publishing to Government oversight committees. On occasion I was given the wheel in corrections and revaluations of this model using VSPAR, a software dedicated to far-reaching Monte Carlo simulations.
-                  </p>
-                  <p>
-                    Along with this rigorous simulation, I also had the experience of standardizing outcomes for the FMECA model (Failure Mode, Effects, and Criticality Analysis). This analysis’ interpretation was important in evaluating outcomes of the system and tagging unnecessary risk. In essence, we were finding vulnerable components through the use of post-processed data. Once this data had been gathered, I was tasked with scripting each outcome into a series of tags for use in the components respective departments.
-                  </p>
+                    <h3 class="mb-0">Miscellaneous</h3>
+                    <p>
+                        Here I got my first taste of Reliability Engineering working on the GPS OCX program. A large
+                        undertaking, the program required a thorough testing regimen at all steps of it’s growth. I was
+                        a member of the RMA team (Reliability, Maintainability, and Availability) with a focus on
+                        overall upkeep of the complex ground system. I helped keep the model properly documented for
+                        publishing to Government oversight committees. On occasion I was given the wheel in corrections
+                        and revaluations of this model using VSPAR, a software dedicated to far-reaching Monte Carlo
+                        simulations.
+                    </p>
+                    <p>
+                        Along with this rigorous simulation, I also had the experience of standardizing outcomes for the
+                        FMECA model (Failure Mode, Effects, and Criticality Analysis). This analysis’ interpretation was
+                        important in evaluating outcomes of the system and tagging unnecessary risk. In essence, we were
+                        finding vulnerable components through the use of post-processed data. Once this data had been
+                        gathered, I was tasked with scripting each outcome into a series of tags for use in the
+                        components respective departments.
+                    </p>
                 </div>
                 <div class="resume-date text-md-right">
-                  <span class="text-primary time-period">The distant past</span>
+                    <span class="text-primary time-period">The distant past</span>
                 </div>
-              </div>
-            -->
+            </div>
         </div>
     </section>
 
-    <!--
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
         <div class="my-auto">
-          <h2 class="mb-5">Education</h2>
+            <h2 class="mb-5">Education</h2>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Virginia Tech</h3>
-              <div class="subheading mb-3">Bachelor of Arts</div>
+            <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                <div class="resume-content mr-auto">
+                    <h3 class="mb-0">Virginia Tech</h3>
+                    <div class="subheading mb-3">Bachelor of Arts</div>
+                </div>
+                <div class="resume-date text-md-right">
+                    <span class="text-primary time-period">September 2011 - June 2016</span>
+                </div>
             </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary time-period">September 2011 - June 2016</span>
-            </div>
-          </div>
 
         </div>
-      </section>
+    </section>
     -->
 
     <!--
@@ -270,18 +278,17 @@
           </p>
         </div>
       </section>
-    -->
 </div>
 
 <!-- Bootstrap core JavaScript -->
-<script src="../assets/js/jquery.min.js"></script>
-<script src="../assets/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/js/jquery.min.js"></script>
+    <script src="../assets/js/bootstrap.bundle.min.js"></script>
 
-<!-- Plugin JavaScript -->
-<script src="../assets/js/jquery.easing.min.js"></script>
+    <!-- Plugin JavaScript -->
+    <script src="../assets/js/jquery.easing.min.js"></script>
 
-<!-- Custom scripts for this template -->
-<script src="../assets/js/resume.min.js"></script>
+    <!-- Custom scripts for this template -->
+    <script src="../assets/js/resume.min.js"></script>
 
 </body>
 
