cleaning up landing page a lil bit

--- a/index.html
+++ b/index.html
@@ -57,10 +57,12 @@
                         />
 					</span>
             <h1>John Burt</h1>
-            <p>Data Analyst</p>
-            <p>
+            <h2>
+                <em>Data Analyst</em>
+            </h2>
+            <h3>
                 <em>Boulder, Colorado</em>
-            </p>
+            </h3>
         </header>
         <footer>
             <ul class="icons">
