--- a/resume/index.html
+++ b/resume/index.html
@@ -35,8 +35,6 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i"
           rel="stylesheet">
     <link href="../assets/css/font-awesome.min.css" rel="stylesheet">
-    <link href="../assets/css/devicons.min.css" rel="stylesheet">
-    <link href="../assets/css/simple-line-icons.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="../assets/css/resume.min.css" rel="stylesheet">
@@ -248,47 +246,44 @@
 
         </div>
     </section>
-    -->
 
-    <!--
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
         <div class="my-auto">
-          <h2 class="mb-5">Skills</h2>
-          <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-          <p>
-            Python, VBA, C++, SQL, 
-          </p>
-      </section>
-    -->
-
-    <!--
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
-        <div class="my-auto">
-          <h2 class="mb-5">Interests</h2>
-          <p>
-            In my free time, I enjoy riding my motorcycle around Northern California and 
-          </p>
-          <p class="mb-0">
-            interests interests interests interests interests interests interests interests interests
-            interests interests interests interests interests interests interests interests interests
-            interests interests interests interests interests interests interests interests interests
-            interests interests interests interests interests interests interests interests interests
-            interests interests interests interests interests interests interests interests interests
-            interests interests interests interests interests interests interests interests interests
-          </p>
+            <h2 class="mb-5">Skills</h2>
+            <div class="subheading mb-3">Programming Languages &amp; Tools</div>
+            <p>
+                Python, VBA, C++, SQL,
+            </p>
         </div>
-      </section>
+    </section>
+
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
+        <div class="my-auto">
+            <h2 class="mb-5">Interests</h2>
+            <p>
+                In my free time, I enjoy riding my motorcycle around Northern California and
+            </p>
+            <p class="mb-0">
+                interests interests interests interests interests interests interests interests interests
+                interests interests interests interests interests interests interests interests interests
+                interests interests interests interests interests interests interests interests interests
+                interests interests interests interests interests interests interests interests interests
+                interests interests interests interests interests interests interests interests interests
+                interests interests interests interests interests interests interests interests interests
+            </p>
+        </div>
+    </section>
 </div>
 
 <!-- Bootstrap core JavaScript -->
-    <script src="../assets/js/jquery.min.js"></script>
-    <script src="../assets/js/bootstrap.bundle.min.js"></script>
+<script src="../assets/js/jquery.min.js"></script>
+<script src="../assets/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Plugin JavaScript -->
-    <script src="../assets/js/jquery.easing.min.js"></script>
+<!-- Plugin JavaScript -->
+<script src="../assets/js/jquery.easing.min.js"></script>
 
-    <!-- Custom scripts for this template -->
-    <script src="../assets/js/resume.min.js"></script>
+<!-- Custom scripts for this template -->
+<script src="../assets/js/resume.min.js"></script>
 
 </body>
 
