making links to resume pop

--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
         </footer>
         <div>
             <p>
-                <a href="/resume">Resume</a> ||
+                <a class="site-navigation" href="/resume">Resume</a> ||
 
-                <a href="/about">About Me</a> ||
+                <a class="site-navigation" href="/about">About Me</a> ||
 
-                <a href="/blog">Blag</a>
+                <a class="site-navigation" href="/blog">Blag</a>
             </p>
         </div>
     </section>
