adding to misc jobs section, moving resume css pointer back to minified css

--- a/resume/index.html
+++ b/resume/index.html
@@ -30,8 +30,7 @@
     <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <!-- In DEV only -->
-    <link href="../assets/css/resume.css" rel="stylesheet">
+    <link href="../assets/css/resume.min.css" rel="stylesheet">
     <noscript>
         <link href="../assets/css/noscript.min.css" rel="stylesheet"/>
     </noscript>
@@ -199,22 +198,20 @@
             <div class="resume-item d-flex flex-column flex-md-row mb-5">
                 <div class="resume-content mr-auto">
                     <h3 class="mb-0">Miscellaneous</h3>
+                    <div class="subheading mb-3 position-title">
+                        Waiter, Dishwash, Busboy
+                    </div>
                     <p>
-                        Here I got my first taste of Reliability Engineering working on the GPS OCX program. A large
-                        undertaking, the program required a thorough testing regimen at all steps of it’s growth. I was
-                        a member of the RMA team (Reliability, Maintainability, and Availability) with a focus on
-                        overall upkeep of the complex ground system. I helped keep the model properly documented for
-                        publishing to Government oversight committees. On occasion I was given the wheel in corrections
-                        and revaluations of this model using VSPAR, a software dedicated to far-reaching Monte Carlo
-                        simulations.
-                    </p>
-                    <p>
-                        Along with this rigorous simulation, I also had the experience of standardizing outcomes for the
-                        FMECA model (Failure Mode, Effects, and Criticality Analysis). This analysis’ interpretation was
-                        important in evaluating outcomes of the system and tagging unnecessary risk. In essence, we were
-                        finding vulnerable components through the use of post-processed data. Once this data had been
-                        gathered, I was tasked with scripting each outcome into a series of tags for use in the
-                        components respective departments.
+                        By the time I made it into the office, I had an illustrious career flipping burgers, cleaning
+                        pots, and taking orders across many different diner joints. There weren't many opportunities to
+                        learn git or Python in these situations, but I did learn very valuable lessons in teamwork.
+                        First and foremost is that if you're working back of house, your clientele isn't the patrons,
+                        but the waiters and hosts that bring you business through providing service for those patrons
+                        (in exchange for dishes, of course). The corollary is that if you are working front of house, it
+                        often makes more sense to prioritize the happiness of back of house than the happiness of
+                        patrons. When people will forever be curmudgeons (especially in this review-app driven
+                        dining age), it so much easier to cut your losses, sit back and have a laugh through the order
+                        window.
                     </p>
                 </div>
                 <div class="resume-date text-md-right">
