--- a/resume/index.html
+++ b/resume/index.html
@@ -65,9 +65,6 @@
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="#abilities">Abilities</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
-            </li>
         </ul>
     </div>
 </nav>
@@ -94,6 +91,25 @@
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
             <h2 class="mb-5">Experience</h2>
+
+            <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                <div class="resume-content mr-auto">
+                    <h3 class="mb-0"><a href="https://www.housecanary.com/">HouseCanary</a></h3>
+                    <div class="subheading mb-3 position-title">
+                        Data Analyst
+                    </div>
+                    <p>
+                        I currently work on our data factory ETL pipeline as a configuration manager. HouseCanary's
+                        product line relies on deep-dive evaluations across the United States, but with that comes a lot
+                        of responsibility in standardization. Much of which is solved through scalable configurations.
+                        As those feeds and that ingestion scales, I've been scratching that Financial Analyst itch of
+                        modeling, monitoring, and alerting as we build out metrics for cross-team processes.
+                    </p>
+                </div>
+                <div class="resume-date text-md-right">
+                    <span class="text-primary time-period">June 2019 - Present</span>
+                </div>
+            </div>
 
             <div class="resume-item d-flex flex-column flex-md-row mb-5">
                 <div class="resume-content mr-auto">
@@ -228,7 +244,7 @@
             <div class="resume-item d-flex flex-column flex-md-row mb-5">
                 <div class="resume-content mr-auto">
                     <h3 class="mb-0">Virginia Tech</h3>
-                    <div class="subheading mb-3">Bachelor of Arts</div>
+                    <div class="subheading mb-3">Bachelor of Arts, Economics</div>
                 </div>
                 <div class="resume-date text-md-right">
                     <span class="text-primary time-period">September 2011 - June 2016</span>
@@ -672,23 +688,6 @@
                     </ul>
                 </div>
             </div>
-        </div>
-    </section>
-
-    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
-        <div class="my-auto">
-            <h2 class="mb-5">Interests</h2>
-            <p>
-                In my free time, I enjoy riding my motorcycle around Northern California and
-            </p>
-            <p class="mb-0">
-                interests interests interests interests interests interests interests interests interests
-                interests interests interests interests interests interests interests interests interests
-                interests interests interests interests interests interests interests interests interests
-                interests interests interests interests interests interests interests interests interests
-                interests interests interests interests interests interests interests interests interests
-                interests interests interests interests interests interests interests interests interests
-            </p>
         </div>
     </section>
 </div>
