--- a/resume/index.html
+++ b/resume/index.html
@@ -37,6 +37,7 @@
 
 </head>
 
+<!-- Thanks to Michael Burt @ http://mpburt.com/ for the general outline of this page -->
 <body id="page-top">
 
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="sideNav">
@@ -254,12 +255,12 @@
         </div>
     </section>
 
+    <!-- This sections design was inspired by Pascal van Gemert @ http://www.pascalvangemert.nl/#/abilities -->
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="abilities">
         <div class="my-auto">
             <h2 class="mb-5">Abilities</h2>
 
             <h3>Tools</h3>
-            <!-- Inspired by Pascal van Gemert @ http://www.pascalvangemert.nl/#/abilities -->
             <div class="row">
                 <div class="col-md-6">
                     <ul class="no-bullets">
