adding new position

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         gtag("config", "UA-135276061-1");
     </script>
-    <title>John Burt - Data Analyst</title>
+    <title>John Burt - Software Engineer</title>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <!--[if lte IE 8
@@ -58,7 +58,7 @@
 					</span>
             <h1>John Burt</h1>
             <h2>
-                <em>Data Analyst</em>
+                <em>Software Engineer</em>
             </h2>
             <h3>
                 <em>Boulder, Colorado</em>
