--- a/resume/index.html
+++ b/resume/index.html
@@ -37,7 +37,7 @@
 
 </head>
 
-<!-- Thanks to Michael Burt @ http://mpburt.com/ for the general outline of this page -->
+<!-- Thanks to Michael Burt @ http://mpburt.com/resume/ for the general outline of this page -->
 <body id="page-top">
 
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="sideNav">
@@ -97,14 +97,24 @@
                 <div class="resume-content mr-auto">
                     <h3 class="mb-0"><a href="https://www.housecanary.com/">HouseCanary</a></h3>
                     <div class="subheading mb-3 position-title">
+                        Junior Software Engineer
+                    </div>
+                    <p>
+                        HouseCanary's evolution into a national brokerage has turned up a wealth
+                        of new data streams to tap into. This has paired well with my growth as a Software Engineer
+                        where I'm taking more direct responsibilities in coalescing standardized data from seemingly
+                        disparate data feeds.
+                    </p>
+                    <div class="subheading mb-3 position-title">
                         Data Analyst
                     </div>
                     <p>
-                        I currently work on our data factory ETL pipeline as a configuration manager. HouseCanary's
+                        I worked on our data factory ETL pipeline managing configurations. HouseCanary's
                         product line relies on deep-dive evaluations across the United States, but with that comes a lot
                         of responsibility in standardization. Much of which is solved through scalable configurations.
-                        As those feeds and that ingestion scales, I've been scratching that Financial Analyst itch of
-                        modeling, monitoring, and alerting as we build out metrics for cross-team processes.
+                        As those feeds and that ingestion scaled, I had the opportunity to scratch that Financial
+                        Analyst itch of modeling, monitoring, and alerting as we built out metrics for cross-team
+                        processes.
                     </p>
                 </div>
                 <div class="resume-date text-md-right">
