trimming images and pointing to the minified css

--- a/site/about/index.html
+++ b/site/about/index.html
@@ -25,7 +25,7 @@
       <!-- Bootstrap core CSS -->
       <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
       <!-- Custom styles for this template -->
-      <link href="../assets/css/about_me.css" rel="stylesheet">
+      <link href="../assets/css/about_me.min.css" rel="stylesheet">
       <noscript>
          <link href="../assets/css/noscript.min.css" rel="stylesheet"/>
       </noscript>
